--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <div class="profile-info">
           <img src="fer.jpg" alt="Foto de Perfil" class="profile-img">
           <h1>Fernanda da Silva Lima</h1>
-          <p><strong>Endereço:</strong></strong>Seu endereço</p>
+          <p><strong>Endereço:</strong></strong>452 Rua Kaiju preto e branco 213, Bairro Ayrton Senna </p>
           <p><strong> Email:</strong> da567837@gmail.com</p>
           <p><strong>Telefone:</strong>(41) 88744-3493</p>
         </div>
         <div class="courses">
           <h2>Cursos Realizados</h2>
       <ul>
-          <li>NOme curso 1 -Instituição 1 - Ano que fez</li>
-          <li>NOme curso 2 -Instituição 2- Ano que fez</li>
-          <li>Nome curso 3 -Instituição 3 - Ano que fez</li>
+          <li>Curso Inglês fluente-ensino skif - 2012</li>
+          <li>App.Office profissionalizante-2019</li> 
+          <li>Eletromecânica- 2020</li>
      </ul>  
   </div>
    <div class="salary expectation">
